force-app/main/default/objects/Invoice_Reminder__mdt/Invoice_Reminder__mdt.object-meta.xml
<CustomObject>
    <label>Invoice Reminder</label>
    <pluralLabel>Invoice Reminders</pluralLabel>
</CustomObject>