force-app/main/default/objects/Invoice_Reminder__mdt/fields/Fourth_Reminder__c.field-meta.xml
<CustomField>
    <fullName>Fourth_Reminder__c</fullName>
    <label>Fourth Reminder</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>