force-app/main/default/objects/Invoice_Reminder__mdt/fields/Second_Reminder__c.field-meta.xml
<CustomField>
    <fullName>Second_Reminder__c</fullName>
    <label>Second Reminder</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>